# choreonoid_ros_pkg

./: README.md  buildme.sh
choreonoid_plugins/: CMakeLists.txt
choreonoid_plugins/src/: BodyRosItem.cpp  BodyRosTankControllerItem.cpp  BodyRosTankControllerItem.h  RosCannonballPlugin.cpp  RosTankPlugin.cpp
choreonoid_plugins/test/: ros-tank.cnoid  tank-game.cnoid  tank-pdc-parameters.yml
choreonoid_ros/: CMakeLists.txt  setting_build_args.sh
choreonoid_ros/launch/: ros-tank.launch  tank-game.launch
choreonoid_ros/model/: cannonball.wrl  tank_ball.body
jvrc_models/: CMakeLists.txt
